--- a/index.html
+++ b/index.html
@@ -1049,5 +1049,11 @@
             composer.setSize(window.innerWidth, window.innerHeight);
         });
     </script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token":"fedaf364c4e445e9aa56dbd55400c83c"}'></script>
+    <!-- End Cloudflare Web Analytics -->
+
 </body>
 </html>
